# fanshare

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  DEMO_TRIAGE_LOG.md  DEMO_TRIAGE_WORKFLOW.md  DESIGN_SYSTEM.md  RESET_WORKFLOW.md  SKILLS.md  TODO.md  TODOS.md  WORKFLOW.md  assignment.md  codama.json  design.md  expenses.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
.claude/: launch.json  settings.local.json
.context/: design-baseline.json
.context/retros/: 2026-04-09-1.json
anchor/: Anchor.toml
anchor/programs/fanshare/: Cargo.toml
anchor/programs/fanshare/src/: lib.rs  tests.rs
anchor/tests/: fanshare.test.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/components/: about-demo-link.tsx  analytics-provider.tsx  badge.tsx  (+13 more)
comms/: READ-ME-FIRST.md  skills-guide.md
scripts/: debug-accounts.ts  e2e-trade-test.ts  export-telemetry.ts  freeze-market.ts  init-players.ts  init-tokenomics.ts  multi-user-qa.ts  oracle.ts  qa-finish-flipper.ts  qa-trigger-webhook.ts  reclaim-demo-kv.ts  reclaim-demo-sol.ts  reset-kv.ts  send-demo-1-invite.ts  setup-helius-webhook.ts  test-freeze-sell.ts
sim/: 2026-04-25-multi-user-sim-results.md  demo-0.5-mental-model-report.md  demo-0.5-onboarding-test-plan.md  demo-0.5-rerun-1-2026-04-22.md  demo-0.5-rerun-2-2026-04-22.md  demo-0.5-rerun-3-2026-04-22.md
test/: bonding-curve.test.ts  fanshare-program.test.ts  kv-history.test.ts  leaderboard-format.test.ts
tokenomics/: overview.md  price-structure.md  token-value-prop.md
(+178 files in other folders)
