[package]
name = "fanshare"
version = "0.1.0"
description = "FanShare bonding curve DEX for NBA player tokens on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fanshare"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
